css/main.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
}

html {
    background-color: #eee;
}

body {
    color: #000;
    font-family: "Helvetica Neue", sans-serif;
    -webkit-font-smoothing: antialiased;
    font-weight: 500;
}

h1 {
    font-family: "heading", "Helvectica Neue", serif;
    font-size: 40px;
}

p {
    font-size: 14px;
}

li {
    list-style: none;
}

ul {
    margin: 0;
    padding: 0;
}

a {
    color: grey;
}

a:hover {
    color: #000;
}

.emoji {
    font-size: 30px;
    user-select: none;
    position: absolute;
    right: 50%;
    color: #000;
}

.ui-draggable {
    cursor: -webkit-grab;
    cursor: grab;
}
.ui-draggable-dragging {
    cursor: -webkit-grabbing;
    cursor: grabbing;
}

.volume-button {
    user-select: none;
    display: none;
}

.volume-button {
    text-decoration: none;
    color: purple;
}

.tldr-container {
    animation: fadeIn 1.5s forwards;
    max-width: 1200px;
    margin: auto;
    margin-top: 150px;
    padding: 0 70px;
}

.tldr {
    max-width: 420px;
    line-height: 24px;
    font-size: 16px;
    text-align: left;
    margin-bottom: 20px;
}
@media (max-width: 500px) {
    .emoji {
        display: none;
    }
}
@media (max-width: 400px) {
    .tldr {
        font-size: 18px;
        line-height: 26px;
    }
}
@media (max-width: 275px) {
    .tldr {
        font-size: 14px;
        line-height: 20px;
        padding: 0px 20px 0 20px;
    }
}

/* Footer ----------------------------------- */

footer {
    display: block;
    animation: fadeIn 1.5s forwards;
    font-size: 14px;
}

footer,
footer li {
    font-size: 16px;
}

.footer-text-container li {
    min-width: 110px;
    cursor: pointer;
    list-style: none;
}

.footer-text-container ul a {
    text-align: left;
    padding: 10px 0;
    margin: auto;
}

@media (min-width: 550px) {
    .footer-text-container {
        overflow: auto;
        margin: 0 auto 0 auto;
    }
    .footer-text-container ul {
        float: left;
        display: block;
    }
    .volume-button {
        display: inline;
        cursor: pointer;
        font-size: 16px;
    }
}

@media (min-width: 1000px) {
    .footer-text-container,
    .work-container {
        padding: 0px 20px;
    }
    .work-container .row {
        margin: 120px auto;
    }
}

